[tool.poetry]
name = "crunchy"
version = "0.1.0"
description = "The best Anime bot money can't buy."
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
roid = "^0.6.0"
uvicorn = "^0.15.0"
orjson = "^3.6.3"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^21.9b0"}
python-dotenv = "^0.19.0"

[tool.poetry.scripts]
start = "crunchy:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

